# modelling-week-rust

./: Cargo.toml
src/: main.rs  test.rs
