[package]
name = "modelling-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { version = "0.4.1", features = [ "boolean", "shortint", "integer", "x86_64-unix" ] }
concrete-boolean = "0.2.1"
concrete = "0.2.1"
concrete_lib = "0.1.5"
